# open-webui-mcp-server

./: .actrc  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  function_anthropic.py  intellij.yaml  mise.fork.toml  mise.toml  pyproject.toml
.github/: RELEASE_CHECKLIST.md
.github/workflows/: FINAL_SUMMARY.md  IMPROVEMENTS.md  PUBLISHING_GUIDE.md  PUBLISH_GUIDE.md  SUMMARY.md  publish.yml
.opencode/: package-lock.json
.sisyphus/plans/: migrate-fastmcp-v3-openapi.md
scripts/: init-api-key.sh
specs/: open-webui.openapi.json
src/openwebui_mcp/: __init__.py  auth.py  client.py  main.py  models.py  openapi_provider.py  server.py
src/openwebui_mcp/specs/: open-webui.openapi.json
tests/: __init__.py  test_client_changes.py  test_integration.py  test_mcp_wrapper_logic.py
