[project]
name = "openwebui-mcp-server"
version = "0.2.1.dev1"
description = "Model Context Protocol (MCP) server for Open WebUI - manage users, groups, models, knowledge bases, and more via AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "Troy Larson", email = "troy@calvinware.com" },
]
maintainers = [
    { name = "Stephan Schielke", email = "steph.schie+open-webui-mcp-server@gmail.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "open-webui",
    "openwebui",
    "admin",
    "management",
    "ai",
    "llm",
    "fastmcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
urls = { }
Homepage = "https://github.com/troylar/open-webui-mcp-server"
Repository = "https://github.com/troylar/open-webui-mcp-server"
"Bug Tracker" = "https://github.com/troylar/open-webui-mcp-server"
# TODO move to troylar on CI/CD and fork handover
Documentation = "https://github.com/stephanschielke/open-webui-mcp-server#readme"
Changelog = "https://github.com/stephanschielke/open-webui-mcp-server/releases"
PyPI = "https://pypi.org/project/openwebui-mcp-server/"


dependencies = [
    "fastmcp>=2.14.5", # TODO Consider upgrading to 3.x.x (https://gofastmcp.com/getting-started/upgrading/from-fastmcp-2#upgrading-from-fastmcp-2)
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]

[project.scripts]
openwebui-mcp = "openwebui_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openwebui_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require docker-compose)",
]
